few more topics

--- a/index.mdx
+++ b/index.mdx
@@ -16,7 +16,7 @@ Explore a wide range of interview topics
     Strategies for frontend and backend applications to ensure reliability and performance
   </Card>
   <Card
-    title="Design Patterns"
+    title="Cloud Design Patterns"
     icon="book-open-cover"
     href="/patterns/overview"
   >
@@ -33,6 +33,13 @@ Explore a wide range of interview topics
     title="Microservices"
     icon="book-open-cover"
     href="/microservices/overview"
+  >
+    Designing and evaluating microservices architectures with real-world trade-offs for interviews
+  </Card>
+   <Card
+    title="Microfrontends"
+    icon="book-open-cover"
+    href="/frontend/mfe/overview"
   >
     Designing and evaluating microservices architectures with real-world trade-offs for interviews
   </Card>
@@ -57,5 +64,27 @@ Explore a wide range of interview topics
   >
     Interview-focused frontend concepts covering architecture, performance, and scalability
   </Card>
+  <Card
+    title="Frontend Design Patterns"
+    icon="book-open-cover"
+    href="/frontend/design-patterns/rendering"
+  >
+    Essential design patterns frequently discussed in senior-level technical and architecture interviews
+  </Card>
+  <Card
+    title="RxJS"
+    icon="book-open-cover"
+    href="/rxjs/overview"
+  >
+    Interview-focused RxJS concepts
+  </Card>
+  <Card
+    title="Nx"
+    icon="book-open-cover"
+    href="frontend/tools/nx/overview"
+  >
+    Interview-focused Nx concepts
+  </Card>
+  
 </Columns>
 
