--- a/index.mdx
+++ b/index.mdx
@@ -9,6 +9,13 @@ Explore a wide range of interview topics
 
 <Columns cols={2}>
   <Card
+    title="System Design"
+    icon="book-open-cover"
+    href="interview-guide/system-design/guide"
+    >
+    Strategies for frontend and backend applications to ensure reliability and performance
+  </Card>
+  <Card
     title="Observability"
     icon="book-open-cover"
     href="/observability/overview"
